--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ div.navbar-portfolio {
   margin: auto;
   font-size: 25px;
 }
-a.active {
+a:hover {
   color: #00abeb;
 }
 .table-div {
@@ -204,6 +204,10 @@ a.active {
   }
 }
 @media only screen and (max-width: 1030px) {
+  body {
+    margin: auto;
+    text-align: center;
+  }
   a.nav-a {
     margin-left: 425px;
   }
